Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19122

recovery-small test_57: sptlrpc_import_sec_ref crash when struct obd_import *imp is NULL

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for stancheff <stancheff@cray.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/c759e863-d5c5-47f8-9a8a-f065c514f054

      test_57 failed with the following error:

      trevis-78vm1 crashed during recovery-small test_57
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-reviews/114509 - 5.14.0-503.40.1.el9_5.x86_64
      servers: https://build.whamcloud.com/job/lustre-reviews/114509 - 5.14.0-503.40.1_lustre.el9.x86_64

      Racy access of import leads too sptlrpc_import_sec_ref() attempting to access NULL ptr.
      Callers (mostly) deal with NULL returned from sptlrpc_import_sec_ref() so return NULL in this case.

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      recovery-small test_57 - trevis-78vm1 crashed during recovery-small test_57

            stancheff Shaun Tancheff
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: