LU-19122 sec: NULL import should not crash

Protect against NULL imp
sptlrpc_import_sec_ref() should return NULL if imp is NULL

Existing callers can handle NULL returned from
sptlrpc_import_sec_ref() when imp is NULL

Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: I086cf835de7513f3a15d4ec3e4b907c3c6eae7bd
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/59903
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Sebastien Buisson <sbuisson@ddn.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>